kubernetes/app-blue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue-deployment
  namespace: app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-blue
  template:
    metadata:
      labels:
        app: app-blue
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: webcontent
          mountPath: /usr/share/nginx/html
      volumes:
      - name: webcontent
        configMap:
          name: app-blue-webpage
